fixed formatting on mobile

--- a/public/newsletter.css
+++ b/public/newsletter.css
@@ -140,7 +140,7 @@
 }
 
 .entry{
-  margin-left: 10px; margin-right: 10px; max-width: 900px; text-align: center; margin-bottom: 240px;
+  max-width: 900px; text-align: center; margin-bottom: 240px;
 }
 
 h1{
